edit: nav z-index to prevent cursor from showing

--- a/src/App.css
+++ b/src/App.css
@@ -176,6 +176,7 @@ h3 {
 /* Navbar Styling */
 .navbar {
   display: flex;
+  z-index: 9999;
   justify-content: space-between;
   align-items: center;
   padding: 15px 85.333px;
